--- a/static/css/github.css
+++ b/static/css/github.css
@@ -1,4 +1,65 @@
-.highlight { background-color: #f0f0f0 }
+.highlight{
+    width:100%;
+    height: auto;
+    overflow: auto;
+}
+
+pre {
+    counter-reset: line-numbering;
+    /*border: solid 1px #d9d9d9;*/
+    border-radius: 0;
+    /*background: #fff;*/
+    padding: 0;
+    font-size: 14px;
+    line-height: 23px;
+    margin-bottom: 30px;
+    white-space: pre;
+    overflow-x: auto;
+    word-break: inherit;
+    word-wrap: inherit;
+}
+
+pre x::before {
+  content: counter(line-numbering);
+  counter-increment: line-numbering;
+  padding-right: 1em; /* space after numbers */
+  width: 25px;
+  text-align: right;
+  opacity: 0.7;
+  display: inline-block;
+  color: #aaa;
+  background: #eee;
+  margin-right: 16px;
+  padding: 2px 10px;
+  font-size: 13px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/*
+pre x:first-of-type::before {
+  padding-top: 10px;
+}
+
+pre x:last-of-type::before {
+  padding-bottom: 10px;
+}
+
+pre x:only-of-type::before {
+  padding: 10px;
+}*/
+.highlight pre{ 
+    display: block;
+    border: 1px;
+    border-radius: 4px;
+    padding: 9.5px;
+    box-shadow: 0px 1px 2px rgba(255, 255, 255, 0.1) inset, 45px 0px 0px rgba(102, 128, 153, 0.05) inset, 0px 1px 0px rgba(102, 128, 153, 0.05);
+    background-color: rgba(102, 128, 153, 0.05);
+}
 .hll { background-color: #ffffcc }
 .c { color: #999988; font-style: italic } /* Comment */
 .err { color: #a61717; background-color: #e3d2d2 } /* Error */
