--- a/templates/view.html
+++ b/templates/view.html
@@ -12,10 +12,9 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="page-header">
-          <!-- 
-              <h1>{{ post.title }}<small>{% for tag in post.tags %} {{ tag.name }} {% endfor %}</small></h1>
-          -->
+           <h1>{{ post.title }}</h1><!--<small>{% for tag in post.tags %} {{ tag.name }} {% endfor %}</small></h1>-->
       </div>  <!-- /.page -->
+      {{ toc }}
       <div class="featurette">
       {{ html }}
       </div> <!-- /.featurette -->
