--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,8 @@
     <title>flexops.org</title>
     <meta name="author" content="nil.song" >
     <link rel="icon" href="/static/css/favicon.ico">
-    <meta name="generator" content="Bluefish 2.2.6" >
-    <meta name="date" content="2015-05-16T20:50:20+0800" >
+    <meta name="generator" content="Bluefish 2.2.7" >
+    <meta name="date" content="2015-06-01T20:58:04+0800" >
     <meta name="copyright" content="GPLv3">
     <meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
     <meta http-equiv="content-style-type" content="text/css">
@@ -73,6 +73,11 @@
               </div>
           </div> <!-- /.featurette -->
         {% endfor %}
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default">2</button>
+            <button type="button" class="btn btn-default">3</button>
+          </div>
         </div>  <!-- /.col-sm-8 -->
         <div class="col-sm-3 col-sm-offset-1 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset" >
