--- a/templates/start.html
+++ b/templates/start.html
@@ -2,7 +2,7 @@
 {% block content -%}
  <div class="container">
   <div class="page-header">
-    <h1>弹性运维 <small>以干掉运维为己任</small></h1>
+    <h1>弹性运维<small></small></h1>
   </div>  <!-- /.page -->
   <div class="row">
     <div class="col-sm-8">
