--- a/templates/base.html
+++ b/templates/base.html
@@ -10,11 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>flexops.org</title>
-    <link rel="icon" href="/static/css/favicon.ico">
+    <link rel="icon" href="/static/img/favicon.ico">
     <link href="/static/css/blog.css" rel="stylesheet">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    <!--
-    <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">-->
+    <link href="/static/css/solarized-light.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
     <!-- <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js" type="text/javascript" charset="utf-8"></script>-->
     <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=2022742157" type="text/javascript" charset="utf-8"></script>
