--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>flexops.org</title>
     <link rel="icon" href="/static/img/favicon.ico">
-    <link href="/static/css/blog.css" rel="stylesheet">
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/solarized-light.css" rel="stylesheet">
     <link href="/static/css/style.css" rel="stylesheet">
@@ -61,6 +60,16 @@
     {% block content -%}
     {%- endblock content %}
 
+    <div class="toolbar">
+        <a href="javascript:;" class="toolbar-item">
+            <span class="toolbar-btn">
+                <i class="toolbar-icon"></i>
+                <span class="toolbar-text">回到<br />顶部</span>
+            </span>
+            <span class="toolbar-layer toolbar-layer-gotop"></span>
+        </a>
+    </div>
+
     <footer class="blog-footer">
     {% block footer -%}
       <div class="container">
@@ -70,7 +79,6 @@
     {%- endblock footer %}
     </footer>
     {% block scripts %}
-    <script type="text/javascript" src="/static/js/js.js"></script>
     <script src="http://cdn.bootcss.com/jquery/1.11.2/jquery.min.js"></script>
     <script src="http://cdn.bootcss.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
